--- a/app/src/main/res/layout/serch.xml
+++ b/app/src/main/res/layout/serch.xml
@@ -5,19 +5,23 @@
     android:layout_height="wrap_content"
 
     >
-   <EditText
-       android:id="@+id/serch_edit"
-       android:layout_width="0dp"
-       android:hint="请输入城市"
-       android:layout_weight="1"
-       android:layout_height="50dp"
-       android:maxLength="15"/>
+
+    <EditText
+        android:id="@+id/serch_edit"
+        android:layout_width="0dp"
+        android:hint="请输入城市"
+        android:layout_weight="1"
+        android:layout_height="50dp"
+        android:maxLength="15"
+        android:layout_alignParentStart="true" />
+
     <Button
         android:id="@+id/serch_button"
         android:layout_width="wrap_content"
         android:layout_height="50dp"
-        android:text="搜索"/>
-
+        android:text="搜索"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true" />
 
 
 </LinearLayout>
